tmp: header transparent box shadow

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -14,6 +14,7 @@
 
 	#view{
 		margin: 50px;
+		background-color: #fff;
 	}
 }
 
@@ -30,6 +31,7 @@
 }
 
 #view{
+	position: relative;
 	@include transition( all 0.3s );
 }
 
