WOOSTIFY-67 #comment tmp

--- a/style.css
+++ b/style.css
@@ -4607,7 +4607,25 @@ dd {
   }
 }
 
-.has-header-transparent .site-header {
+@media (min-width: 992px) {
+  .has-header-transparent.header-transparent-for-desktop .site-header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+}
+
+@media (max-width: 991px) {
+  .has-header-transparent.header-transparent-for-mobile .site-header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+}
+
+.has-header-transparent.header-transparent-for-all-devices .site-header {
   position: absolute;
   left: 0;
   right: 0;
