--- a/assets/css/sass/base/layout/topbar.scss
+++ b/assets/css/sass/base/layout/topbar.scss
@@ -1,6 +1,7 @@
 .topbar{
 	.woostify-container{
 		@include flex( flex, space-between, center );
+		flex-wrap: wrap;
 		&:after{
 			content: none;
 		}
