--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -81,7 +81,7 @@
 .checkout_coupon.woocommerce-form-coupon{
 	border: 2px dashed #e8e8e8;
 	border-radius: 2px;
-	
+
 	@media ( min-width: 601px ) {
 		height: 100px $i;
 		padding-right: 30px;
@@ -106,6 +106,11 @@
 		float: none;
 		margin-bottom: 0;
 		width: auto;
+
+		input,
+		button{
+			border-radius: 0;
+		}
 	}
 
 	.form-row-first{
@@ -305,7 +310,6 @@
 }
 
 #place_order{
-	border-radius: 50px;
 	font-weight: 600;
 	text-transform: uppercase;
 	width: 100%;
