--- a/assets/css/sass/base/layout/header-transparent.scss
+++ b/assets/css/sass/base/layout/header-transparent.scss
@@ -6,6 +6,7 @@
 				left: 0;
 				right: 0;
 				z-index: 10;
+				background-color: transparent;
 			}
 		}
 	}
@@ -17,6 +18,7 @@
 				left: 0;
 				right: 0;
 				z-index: 10;
+				background-color: transparent;
 			}
 		}
 	}
@@ -27,6 +29,7 @@
 			left: 0;
 			right: 0;
 			z-index: 10;
+			background-color: transparent;
 		}
 	}
 }
