--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -59,7 +59,7 @@
 			white-space: nowrap;
 			text-overflow: ellipsis;
 			overflow: hidden;
-			display: block;
+			display: block !important;
 		}
 	}
 
