add site-header-inner div

--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -383,3 +383,8 @@
   box-shadow: none !important;
   text-decoration: none;
 }
+
+/* Button Devices on Customizer */
+.wp-full-overlay-footer .devices {
+  display: flex;
+}
