--- a/assets/css/sass/base/layout/blog/blog-single.scss
+++ b/assets/css/sass/base/layout/blog/blog-single.scss
@@ -240,6 +240,10 @@
             }
         }
     }
+    .comment-form-cookies-consent{
+    	flex: 1 1 100%;
+    	margin-bottom: 20px;
+    }
 }
 
 #cancel-comment-reply-link{
