--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -1,4 +1,4 @@
-.site-header{
+.site-header-inner{
 	border-bottom: 1px solid #eaeaea;
 
 	p{
@@ -303,7 +303,7 @@
 			flex: 0 1 auto;
 		}
 	}
-	.site-header{
+	.site-header-inner{
 
 	    .woostify-container{
 	    	padding: 15px;
