--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -380,3 +380,10 @@ $green: #45b964;
 		text-decoration: none;
 	}
 }
+
+/* Button Devices on Customizer */
+.wp-full-overlay-footer{
+	.devices{
+		display: flex;
+	}
+}
