--- a/style.css
+++ b/style.css
@@ -4316,22 +4316,22 @@ dd {
   text-align: right;
 }
 
-.site-header {
+.site-header-inner {
   border-bottom: 1px solid #eaeaea;
   /* logo */
   /* menu */
   /* search form */
 }
 
-.site-header p:empty {
+.site-header-inner p:empty {
   display: none;
 }
 
-.site-header p:last-child {
+.site-header-inner p:last-child {
   margin-bottom: 0;
 }
 
-.site-header .woostify-container {
+.site-header-inner .woostify-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -4339,51 +4339,51 @@ dd {
   min-height: 70px;
 }
 
-.site-header .woostify-container:after {
+.site-header-inner .woostify-container:after {
   content: none;
 }
 
-.site-header .logo {
+.site-header-inner .logo {
   margin: 0;
 }
 
-.site-header .site-branding .beta.site-title {
+.site-header-inner .site-branding .beta.site-title {
   margin: 0;
   font-size: 24px;
 }
 
 @media (max-width: 992px) {
-  .site-header .site-branding {
+  .site-header-inner .site-branding {
     text-align: center;
   }
 }
 
 @media (min-width: 992px) {
-  .site-header .site-navigation:last-child .main-navigation {
+  .site-header-inner .site-navigation:last-child .main-navigation {
     padding-right: 0;
   }
 }
 
-.site-header .site-navigation + .site-search {
+.site-header-inner .site-navigation + .site-search {
   margin-left: 10px;
 }
 
 @media (min-width: 992px) {
-  .site-header .main-navigation {
+  .site-header-inner .main-navigation {
     padding: 0 20px;
   }
-  .site-header .main-navigation .primary-navigation {
+  .site-header-inner .main-navigation .primary-navigation {
     padding-left: 0;
     margin: 0;
   }
-  .site-header .main-navigation .primary-navigation > li {
+  .site-header-inner .main-navigation .primary-navigation > li {
     display: inline-flex;
     line-height: 1;
   }
-  .site-header .main-navigation .primary-navigation > li > a {
+  .site-header-inner .main-navigation .primary-navigation > li > a {
     padding: 0 20px;
   }
-  .site-header .main-navigation .primary-navigation > li ul {
+  .site-header-inner .main-navigation .primary-navigation > li ul {
     opacity: 0;
     visibility: hidden;
     position: absolute;
@@ -4397,12 +4397,12 @@ dd {
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
   }
-  .site-header .main-navigation .primary-navigation > li ul ul {
+  .site-header-inner .main-navigation .primary-navigation > li ul ul {
     top: 20%;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
   }
-  .site-header .main-navigation .primary-navigation > li ul li.menu-item-has-children:after {
+  .site-header-inner .main-navigation .primary-navigation > li ul li.menu-item-has-children:after {
     content: "\e649";
     font-family: "themify";
     font-size: 12px !important;
@@ -4411,17 +4411,17 @@ dd {
     position: absolute;
     right: 10px;
   }
-  .site-header .main-navigation .primary-navigation > li ul a {
+  .site-header-inner .main-navigation .primary-navigation > li ul a {
     display: block;
     padding: 10px 20px;
   }
-  .site-header .main-navigation .primary-navigation > li ul a:hover {
+  .site-header-inner .main-navigation .primary-navigation > li ul a:hover {
     background: rgba(239, 239, 239, 0.28);
   }
-  .site-header .main-navigation .primary-navigation li {
+  .site-header-inner .main-navigation .primary-navigation li {
     position: relative;
   }
-  .site-header .main-navigation .primary-navigation li:hover > ul {
+  .site-header-inner .main-navigation .primary-navigation li:hover > ul {
     pointer-events: auto;
     opacity: 1;
     visibility: visible;
@@ -4429,7 +4429,7 @@ dd {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
   }
-  .site-header .main-navigation .primary-navigation .sub-menu {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu {
     pointer-events: none;
     -webkit-transition-duration: 0.2s;
     transition-duration: 0.2s;
@@ -4439,7 +4439,7 @@ dd {
 }
 
 @media (min-width: 992px) and (min-width: 992px) {
-  .site-header .main-navigation .primary-navigation .sub-menu {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu {
     -webkit-box-shadow: 0 2px 8px 0 rgba(125, 122, 122, 0.2);
     box-shadow: 0 2px 8px 0 rgba(125, 122, 122, 0.2);
     border-radius: 4px;
@@ -4447,50 +4447,50 @@ dd {
 }
 
 @media (min-width: 992px) {
-  .site-header .main-navigation .primary-navigation .sub-menu > li > ul {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu > li > ul {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
     top: 0;
     left: 110%;
   }
-  .site-header .main-navigation .primary-navigation .sub-menu > li:hover > ul {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu > li:hover > ul {
     left: 100%;
   }
-  .site-header .main-navigation .primary-navigation .sub-menu a {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu a {
     white-space: nowrap;
   }
-  .site-header .main-navigation li {
+  .site-header-inner .main-navigation li {
     list-style: none;
   }
 }
 
-.site-header .site-search {
+.site-header-inner .site-search {
   min-width: 270px;
 }
 
-.site-header .site-search + .site-tools {
+.site-header-inner .site-search + .site-tools {
   margin-left: 10px;
 }
 
-.site-header .site-search + .site-tools .shopping-bag-button:first-child:last-child {
+.site-header-inner .site-search + .site-tools .shopping-bag-button:first-child:last-child {
   margin-left: 15px;
 }
 
-.site-header .site-search form {
+.site-header-inner .site-search form {
   height: 40px;
 }
 
-.site-header .site-search form:after {
+.site-header-inner .site-search form:after {
   font-size: 16px;
   width: 40px;
   height: 40px;
 }
 
-.site-header .site-search form .search-field {
+.site-header-inner .site-search form .search-field {
   padding-right: 40px;
 }
 
-.site-header .site-search form button[type="submit"] {
+.site-header-inner .site-search form button[type="submit"] {
   width: 40px;
 }
 
@@ -4609,15 +4609,15 @@ dd {
   .header-layout-1 .site-branding {
     flex: 0 1 auto;
   }
-  .site-header .woostify-container {
+  .site-header-inner .woostify-container {
     padding: 15px;
     justify-content: center;
   }
-  .site-header .site-navigation,
-  .site-header .site-search {
+  .site-header-inner .site-navigation,
+  .site-header-inner .site-search {
     display: none;
   }
-  .site-header .logo {
+  .site-header-inner .logo {
     max-width: 70%;
     margin: 0 auto;
   }
@@ -4639,32 +4639,31 @@ dd {
   }
 }
 
+.has-header-transparent .site-header {
+  position: static;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
+.has-header-transparent .site-header-inner {
+  background-color: transparent;
+}
+
 @media (min-width: 992px) {
   .has-header-transparent.header-transparent-for-desktop .site-header {
     position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    background-color: transparent;
   }
 }
 
 @media (max-width: 991px) {
   .has-header-transparent.header-transparent-for-mobile .site-header {
     position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    background-color: transparent;
   }
 }
 
 .has-header-transparent.header-transparent-for-all-devices .site-header {
   position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  background-color: transparent;
 }
 
 .woostify-icon-bar {
@@ -6024,6 +6023,11 @@ dd {
 
 #respond .logged-in-as a:hover {
   text-decoration: underline;
+}
+
+#respond .comment-form-cookies-consent {
+  flex: 1 1 100%;
+  margin-bottom: 20px;
 }
 
 #cancel-comment-reply-link {
