--- a/assets/css/sass/modules/contact-form-7.scss
+++ b/assets/css/sass/modules/contact-form-7.scss
@@ -6,7 +6,7 @@
 	br{
 		display: none;
 	}
-	
+
 	.ajax-loader {
 		display: none;
 		opacity: 0;
@@ -134,6 +134,7 @@
 		padding: 20px;
 		resize: none;
 		border-radius: 4px;
+		margin-bottom: 30px;
 		@extend .duration;
 
 		@include placeholder{
@@ -186,6 +187,40 @@
 			@extend .duration;
 			&:hover{
 				text-decoration: none;
+				color: #fff;
+			}
+		}
+	}
+}
+
+.woostify-simple-subsbrice-form-dark{
+	input{
+		background-color: $tr;
+		&:not([type="submit"]){
+			height: 50px;
+			padding: 0 110px 0 20px;
+			display: block;
+			width: 100%;
+			color: #fff;
+			@extend .duration;
+
+			&:focus{
+				border-color: #c6c0c0;
+			}
+		}
+
+		&[type="submit"]{
+			font-size: 18px;
+			font-weight: 700;
+			position: absolute;
+			right: 0;
+			top: 0;
+			height: 50px;
+			border: 0;
+			padding: 0 20px;
+			color: #fff;
+			@extend .duration;
+			&:hover{
 				color: #fff;
 			}
 		}
