WOOSTIFY-82 #comment Add intro Pro message

--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -346,7 +346,7 @@ $green: #45b964;
 }
 
 /* Admin notice */
-.woostify-admin-notice{
+.woostify-options-notice{
 	padding: 10px !important;
 	border-left: 0;
 	clear: both;
