--- a/assets/css/admin/welcome-screen/welcome.css
+++ b/assets/css/admin/welcome-screen/welcome.css
@@ -346,37 +346,37 @@
 }
 
 /* Admin notice */
-.woostify-admin-notice {
+.woostify-options-notice {
   padding: 10px !important;
   border-left: 0;
   clear: both;
   position: relative;
 }
 
-.woostify-admin-notice .woostify-notice-content {
+.woostify-options-notice .woostify-notice-content {
   display: flex;
   align-items: center;
   background-color: #faf5ef;
   padding: 20px;
 }
 
-.woostify-admin-notice .woostify-notice-img {
+.woostify-options-notice .woostify-notice-img {
   margin-left: 10px;
   margin-right: 30px;
   width: 50px;
   transform: rotate(-30deg);
 }
 
-.woostify-admin-notice .woostify-notice-heading {
+.woostify-options-notice .woostify-notice-heading {
   font-size: 1.4em;
 }
 
-.woostify-admin-notice .woostify-notice-text a {
+.woostify-options-notice .woostify-notice-text a {
   font-weight: 700;
   color: #001099;
 }
 
-.woostify-admin-notice .notice-dismiss {
+.woostify-options-notice .notice-dismiss {
   top: 5px;
   right: 5px;
   outline: none !important;
