--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -381,6 +381,10 @@ $green: #45b964;
 	}
 }
 
+.woostify-pro-release-notice {
+	background-color: #faf5ef;
+}
+
 /* Button Devices on Customizer */
 .wp-full-overlay-footer{
 	.devices{
