WOOSTIFY-80 #comment support yith quick view plugin #done

--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -82,6 +82,12 @@
 }
 
 .ps-layout-1{
+	.no-transform{
+		.animated-meta{
+			display: inline-flex;
+			flex-direction: column;
+		}
+	}
 	.product-loop-meta{
 		&.no-transform{
 			.button,
