--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -38,7 +38,7 @@
 				@include translatex( 0 );
 			}
 		}
-		#woostify-overlay{{
+		#woostify-overlay{
 			opacity: 1;
 			visibility: visible;
 			pointer-events: auto;
