--- a/style.css
+++ b/style.css
@@ -6212,11 +6212,45 @@ dd {
 }
 
 /* woocommerce sidebar mobile */
-@media (max-width: 991px) {
-  .sidebar-mobile-open {
-    overflow: hidden;
+.sidebar-mobile-open {
+  overflow: hidden;
+}
+
+.sidebar-mobile-open #woostify-overlay {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.sidebar-mobile-open #woostify-overlay:after {
+  content: "\e646";
+  font-family: "themify";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+.sidebar-mobile-open .logged-in.admin-bar #woostify-overlay:after {
+  top: 66px;
+}
+
+@media (min-width: 783px) {
+  .sidebar-mobile-open .logged-in.admin-bar #woostify-overlay:after {
+    top: 52px;
   }
-  .sidebar-mobile-open .shop-widget {
+}
+
+@media (max-width: 991px) {
+  .shop-widget {
     margin-top: 0 !important;
     position: fixed;
     left: 0;
@@ -6232,47 +6266,26 @@ dd {
     visibility: hidden;
     -webkit-transform: translateX(-100%);
     transform: translateX(-100%);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.2s;
+    transition-duration: 0.2s;
   }
-  .logged-in.admin-bar .sidebar-mobile-open .shop-widget {
+  .logged-in.admin-bar .shop-widget {
     top: 46px;
   }
 }
 
 @media (max-width: 991px) and (min-width: 783px) {
-  .logged-in.admin-bar .sidebar-mobile-open .shop-widget {
+  .logged-in.admin-bar .shop-widget {
     top: 32px;
   }
 }
 
 @media (max-width: 991px) {
-  .sidebar-mobile-open .shop-widget.active {
+  .shop-widget.active {
     opacity: 1;
     visibility: visible;
     -webkit-transform: translateX(0);
     transform: translateX(0);
-  }
-  .sidebar-mobile-open #woostify-overlay {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-  .sidebar-mobile-open #woostify-overlay:after {
-    content: "\e646";
-    font-family: "themify";
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    color: #fff;
-    font-weight: 700;
-    font-size: 1.5em;
   }
 }
 
