WOOSTIFY-86 #comment update Button css on order page #done

--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -225,3 +225,13 @@
         }
     }
 }
+
+.woocommerce-orders-table__cell-order-actions{
+	display: inline-flex;
+	flex-direction: column;
+	text-align: center;
+	border: 0;
+	a+a{
+		margin-top: 10px;
+	}
+}
