WOOSTIFY-87 #comment support Variation Gallery plugin #done

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -1,10 +1,12 @@
 /* Content full-width */
 .elementor-template-full-width{
-	#content{
-		.woostify-container{
-			width: 100%;
-			padding-left: 0;
-			padding-right: 0;
+	&:not(.single-product){
+		#content{
+			.woostify-container{
+				width: 100%;
+				padding-left: 0;
+				padding-right: 0;
+			}
 		}
 	}
 }
