WOOSTIFY-96 #comment woocommerce message style #done

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -233,6 +233,7 @@
 	}
 }
 .woocommerce-message{
+	clear: both;
 	@media ( max-width: 600px ) {
 		flex-direction: column;
 		align-items: flex-start;
