WOOSTIFY-102 #comment remove metabox tab js #done

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -278,7 +278,8 @@
 // table variations.
 .variations {
 	border: 0;
-	margin-bottom: 40px;
+	margin-top: 0;
+	margin-bottom: 20px;
 	td {
 		border: 0;
 		padding: 2px 0;
@@ -308,6 +309,20 @@
 	}
 	.value{
 		max-width: 50%;
+	}
+	.tawcvs-swatches{
+		.swatch{
+			&.selected{
+				box-shadow: none;
+			}
+		}
+		.swatch-label{
+			width: auto;
+			height: auto;
+			border-radius: 4px;
+			padding-left: 10px;
+			padding-right: 10px;
+		}
 	}
 }
 
