--- a/assets/css/admin/metabox.css
+++ b/assets/css/admin/metabox.css
@@ -19,38 +19,7 @@
   padding: 0;
 }
 
-/* tabs */
-.woostify-metabox-tabs {
-  clear: both;
-  position: relative;
-  z-index: 2;
-  bottom: -1px;
-}
-
-.woostify-metabox-tabs a {
-  outline: none;
-  box-shadow: none;
-  background-color: #e9e9e9;
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 20px;
-  border: 1px solid #ddd;
-  color: #444;
-  font-size: 14px;
-  font-weight: 600;
-  margin-left: 0.3em;
-}
-
-.woostify-metabox-tabs a:first-of-type {
-  margin-left: 1em;
-}
-
-.woostify-metabox-tabs a.current {
-  border-bottom-color: #fff;
-  background-color: #fff;
-}
-
-/* content box */
+/* CONTENT BOX */
 /*content tab */
 .woostify-metabox-content:not(.current) {
   display: none;
