--- a/assets/css/admin/metabox.scss
+++ b/assets/css/admin/metabox.scss
@@ -27,39 +27,7 @@
 	}
 }
 
-/* tabs */
-.woostify-metabox-tabs{
-	clear: both;
-	position: relative;
-	z-index: 2;
-	bottom: -1px;
-
-	a{
-		outline: none;
-		box-shadow: none;
-		background-color: #e9e9e9;
-		text-decoration: none;
-		display: inline-block;
-		padding: 8px 20px;
-		border: 1px solid #ddd;
-		color: #444;
-		font-size: 14px;
-		font-weight: 600;
-		margin-left: 0.3em;
-
-		&:first-of-type{
-			margin-left: 1em;
-		}
-
-		&.current {
-			border-bottom-color: #fff;
-			background-color: #fff;
-		}
-	}
-}
-
-/* content box */
-
+/* CONTENT BOX */
 /*content tab */
 .woostify-metabox-content{
 	&:not(.current) {
