--- a/assets/css/sass/base/layout/dialog-search.scss
+++ b/assets/css/sass/base/layout/dialog-search.scss
@@ -41,6 +41,10 @@
 	top: 0;
 	background-color: rgba(55, 58, 71, 0.9);
 	transition-duration: 0.4s;
+
+	form{
+		margin: 0;
+	}
 }
 
 .dialog-search-content{
